# NanoArray-Python-Agent

./: .gitignore  README.md  pyproject.toml  research_agent.py
tools/: search.py  writer.py
